FIRST SUCCESS in parsing lambda terms

--- a/variational_gadts.fsproj
+++ b/variational_gadts.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Lib.fs" />
+    <Compile Include="Parser.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
