use computation expressions for error handling

--- a/variational_gadts.fsproj
+++ b/variational_gadts.fsproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="FParsec" Version="1.1.1" />
+    <PackageReference Include="FSharp.Core" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
