--- a/variational_gadts.fsproj
+++ b/variational_gadts.fsproj
@@ -6,8 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="MyUtil.fs" />
     <Compile Include="Syntax.fs" />
     <Compile Include="Parser.fs" />
+    <Compile Include="TypeChecker.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
